# fileString

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  help.MD  main.cpp
tests/: test.c  test.cpp  test.txt  test.txt.h  test.txt.hpp
